update(ew): use scrollbar to avoid layout shifts

--- a/apps/epic-web/src/styles/globals.css
+++ b/apps/epic-web/src/styles/globals.css
@@ -156,7 +156,7 @@ mux-player::part(vertical-layer) {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply overflow-y-scroll bg-background text-foreground;
     font-feature-settings: 'rlig' 1, 'calt' 1;
   }
 }
